# j-quants-doc-mcp

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/: CODEOWNERS.txt
src/j_quants_doc_mcp/: __init__.py  cli.py  exceptions.py  schemas.py  server.py  validate_endpoints.py  validate_patterns.py
src/j_quants_doc_mcp/data/: endpoints.json  faq.json  patterns.json  reference_data.json
src/j_quants_doc_mcp/models/: __init__.py  endpoint.py  pattern.py
src/j_quants_doc_mcp/resources/: __init__.py  specifications.py
src/j_quants_doc_mcp/templates/: python_httpx.jinja2
src/j_quants_doc_mcp/templates/patterns/: auth_flow.py  bulk_download.py  bulk_download_historical.py  bulk_download_latest.py  bulk_download_live.py  eq_bars_daily.py  financial_analysis.py  market_daily_data.py  pagination.py  rate_limit.py
src/j_quants_doc_mcp/tools/: __init__.py  codegen.py  describe.py  lookup.py  qa.py  search.py
tests/: __init__.py  test_codegen_tool.py  test_data_loader.py  test_describe_endpoint.py  test_describe_tool.py  test_e2e_mcp_client.py  test_error_handling.py  test_lookup_tool.py  test_new_endpoints.py  test_qa_tool.py  test_reference_data.py  test_search_endpoints.py  test_tool_integration.py  test_validation.py
tests/fixtures/: test_endpoints.json  test_faq.json  test_patterns.json
